réduction dette technique
svn path=/java/trunk/; revision=3656